terminación parcial del módulo de tanques - API
