# storage/api-docs/api-docs.json
@@ -304,6 +304,124 @@
                 ]
             }
         },
+        "/clients/{id}/tanks": {
+            "get": {
+                "tags": [
+                    "Tanques"
+                ],
+                "summary": "Listado de tanques",
+                "operationId": "App\\Http\\Controllers\\Api\\Client\\ClientTankController::index",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Id del cliente",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Muestra el listado de tanques asociados a un cliente.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Id no encontrado."
+                    },
+                    "401": {
+                        "description": "Usuario no autorizado."
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Tanques"
+                ],
+                "summary": "Almacena un tanque",
+                "operationId": "App\\Http\\Controllers\\Api\\Client\\ClientTankController::store",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Id del cliente",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "internal_serial_number": {
+                                        "type": "string"
+                                    },
+                                    "serial_number": {
+                                        "type": "string"
+                                    },
+                                    "maker": {
+                                        "type": "string"
+                                    },
+                                    "fabrication_year": {
+                                        "type": "string"
+                                    },
+                                    "capacity": {
+                                        "type": "string"
+                                    },
+                                    "long": {
+                                        "type": "string"
+                                    },
+                                    "diameter": {
+                                        "type": "string"
+                                    },
+                                    "head_thickness": {
+                                        "type": "string"
+                                    },
+                                    "body_thickness": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Almacena un nuevo tanque asociado a un cliente.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Entidad no procesable."
+                    },
+                    "401": {
+                        "description": "Usuario no autorizado."
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
         "/companies/{id}/clients": {
             "get": {
                 "tags": [
@@ -686,6 +804,127 @@
                     }
                 ]
             }
+        },
+        "/tanks/{id}": {
+            "get": {
+                "tags": [
+                    "Tanques"
+                ],
+                "summary": "Muestra la información de un tanque",
+                "operationId": "App\\Http\\Controllers\\Api\\Tank\\TankController::show",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Id del tanque",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Muestra la información asociada a un tanque.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Id no encontrado."
+                    },
+                    "401": {
+                        "description": "Usuario no autorizado."
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Tanques"
+                ],
+                "summary": "Actualiza un tanque",
+                "operationId": "App\\Http\\Controllers\\Api\\Tank\\TankController::update",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Id del tanque",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "client_id": {
+                                        "type": "integer"
+                                    },
+                                    "internal_serial_number": {
+                                        "type": "string"
+                                    },
+                                    "serial_number": {
+                                        "type": "string"
+                                    },
+                                    "maker": {
+                                        "type": "string"
+                                    },
+                                    "fabrication_year": {
+                                        "type": "string"
+                                    },
+                                    "capacity": {
+                                        "type": "string"
+                                    },
+                                    "long": {
+                                        "type": "string"
+                                    },
+                                    "diameter": {
+                                        "type": "string"
+                                    },
+                                    "head_thickness": {
+                                        "type": "string"
+                                    },
+                                    "body_thickness": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Almacena un nuevo cliente asociado a una empresa.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "se debe especificar al menos un valor diferente para actualizar."
+                    },
+                    "401": {
+                        "description": "Usuario no autorizado."
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
         }
     },
     "tags": [
@@ -700,6 +939,10 @@
         {
             "name": "Clientes",
             "description": "Endpoints para el módulo de clientes"
+        },
+        {
+            "name": "Tanques",
+            "description": "Endpoints para el módulo de tanques"
         },
         {
             "name": "Clientes",
@@ -724,6 +967,10 @@
         {
             "name": "Estados/departamentos",
             "description": "Endpoints para el módulo de ciudades"
+        },
+        {
+            "name": "Tanques",
+            "description": "Endpoints para el módulo de tanques"
         }
     ],
     "components": {
